# HNPE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test_install.yml
Ex1-ToyModel/: check-computing-time.py  eval.py  figures.py  inference-cluster.py  inference-script.py  inference.py  posterior.py  simulator.py  thumbnail.py  viz.py
Ex1-ToyModel/HNPE-Ex1-ToyModel/: 298464_0_0_log.err  298464_0_0_log.out  298464_0_submitted.pkl  298464_1_0_log.err  298464_1_0_log.out  298464_1_submitted.pkl  298464_2_0_log.err  298464_2_0_log.out  298464_2_submitted.pkl  298464_3_0_log.err  298464_3_0_log.out  298464_3_submitted.pkl  298464_4_0_log.err  298464_4_0_log.out  298464_4_submitted.pkl  298464_5_0_log.err  298464_5_0_log.out  298464_5_submitted.pkl  298464_6_0_log.err  298464_6_0_log.out  298464_6_submitted.pkl  298464_7_0_log.err  298464_7_0_log.out  298464_7_submitted.pkl  (+5 more)
Ex2-JRNMM/: alphawaves_data.py  eval_sim.py  figure-ducktape.py  figure-nextra.py  inference-cluster.py  inference-drago.py  inference-no-gain.py  inference.py  inference_alphaeeg.py  install_JRNMM.sh  posterior.py  results-ducktape.pkl  script_margaret.py  simulator.py  summary.py  viz.py
Ex3-Microphones/: inference-script.py  inference.py  make_figure.py  posterior.py  simulator.py  viz.py
Ex3-ToyModel-amortizeNextra/: eval.py  inference.py  posterior.py  script_margaret.py  simulator.py  viz.py  viz_analytic.py
hnpe/: cluster_profile.py  inference.py  misc.py  summary.py
hnpe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+55 files in other folders)
