[metadata]
name = hnpe
version = 0.1.dev0
maintainer = Pedro L. C. Rodrigues
author_email = pedro.rodrigues@inria.fr
license = BSD (3-clause)
url = https://github.com/plcrodrigues/HNPE.git
description = Hierarchical Neural Posterior Estimation.
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
platforms = any

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    sbi
    pyknos
    torch
